--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,6 +24,7 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayoutName"
             android:layout_width="match_parent"
+            android:textColorHint="#FFF"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp" >
 
@@ -32,7 +33,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_name"
-                android:textColorHint="@color/colorText"
                 android:inputType="text"
                 android:maxLines="1"
                 android:textColor="@color/colorText" />
@@ -42,6 +42,7 @@
             android:id="@+id/textInputLayoutEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColorHint="#FFF"
             android:layout_marginTop="20dp" >
 
             <android.support.design.widget.TextInputEditText
@@ -49,7 +50,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_email"
-                android:textColorHint="@color/colorText"
                 android:inputType="text"
                 android:maxLines="1"
                 android:textColor="@color/colorText" />
@@ -59,6 +59,7 @@
             android:id="@+id/textInputLayoutPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColorHint="#FFF"
             android:layout_marginTop="20dp" >
 
             <android.support.design.widget.TextInputEditText
@@ -66,7 +67,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_password"
-                android:textColorHint="@color/colorText"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:textColor="@color/colorText" />
@@ -76,6 +76,7 @@
             android:id="@+id/textInputLayoutConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColorHint="#FFF"
             android:layout_marginTop="20dp" >
 
             <android.support.design.widget.TextInputEditText
@@ -83,7 +84,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_confirm_password"
-                android:textColorHint="@color/colorText"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:textColor="@color/colorText" />
